# kernel_testing_framework

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
src/: device_mem.hpp  includes.h  main.cu  test_framework.cpp  test_framework.hpp
src/kernels/: kernel_v1.cuh  kernel_v2.cuh  kernel_v3.cuh  kernel_v4.cuh  kernel_v5.cuh  kernel_v6.cuh
